# kvStoreV2

./: .gitignore  ARCHITECTURE.md  ASYNC_SERVER_MIGRATION.md  CMakeLists.txt  QUICKSTART.md  README.md  SETUP-SUMMARY.md  cleanup_main.ps1  deploy-linux-client.ps1  deploy_all.ps1  deploy_client.ps1  deploy_server.ps1  init_repo.ps1  nginx-kvstore.conf  output.txt  run_azure_linux.ps1  run_azure_linux_node1.ps1  temp_main.txt
KVClient/: CMakeLists.txt  README.md
KVClient/include/: AzureStorageKVStoreLibV2.h  KVTypes.h
KVClient/protos/: kvstore.proto
KVClient/src/: KVStoreGrpcClient.cpp
KVPlayground/: CACHE_INTEGRATION.md  CMakeLists.txt  QUICKSTART.md  README.md  conversation_template.txt  precompute_tokens.py  tokenizer.py
KVPlayground/src/: main.cpp
KVService/: BUILD_DEPLOY_METRICS.md  CMakeLists.txt  OPENTELEMETRY_METRICS.md  OPENTELEMETRY_QUICKSTART.md  QUICKSTART.md  README.md  SETUP-SUMMARY.md  build.ps1  build_with_local_sdk.ps1  build_with_official_sdk.ps1  configure-nsg-rules.ps1  setupServer-ssh-batch.ps1  setupServer-ssh.ps1  setupServer.ps1  vcpkg.json
KVService/include/: AzureStorageKVStoreLib.h  AzureStorageKVStoreLibV2.h  BloomFilter.h  FileConfigProvider.h  IAccountResolver.h  InMemoryAccountResolver.h  KVStoreServiceImpl.h  KVTypes.h  MetricsHelper.h  ServiceConfig.h  StorageDatabaseResolver.h
KVService/protos/: kvstore.proto
KVService/sf/pkg/KVStoreServerApp/: ApplicationManifest.xml  deploy.ps1
KVService/sf/pkg/KVStoreServerApp/KVStoreServerNode0Pkg/: ServiceManifest.xml
KVService/sf/pkg/KVStoreServerApp/KVStoreServerNode0Pkg/Code/: Run-KVStoreServer.ps1
KVService/sf/pkg/KVStoreServerApp/KVStoreServerNode1Pkg/: ServiceManifest.xml
KVService/sf/pkg/KVStoreServerApp/KVStoreServerNode1Pkg/Code/: Run-KVStoreServer.ps1  start.cmd
KVService/src/: AzureStorageKVStoreLib.cpp  AzureStorageKVStoreLibV2.cpp  BloomFilter.cpp  FileConfigProvider.cpp  InMemoryAccountResolver.cpp  KVStoreServiceImpl.cpp  KVStoreServiceImpl_async.cpp  MetricsHelper.cpp  StorageDatabaseResolver.cpp  client_test.cpp  server.cpp
KVService/src/reactors/: LookupReactor.cpp  LookupReactor.h  ReactorCommon.cpp  ReactorCommon.h  ReadReactor.cpp  ReadReactor.h  StreamingReadReactor.cpp  StreamingReadReactor.h  WriteReactor.cpp  WriteReactor.h
docs/: ARCHITECTURE.md  AZURE_MONITOR_SETUP.md  COMPLETION.md  GRPC_OPTIMIZATIONS.md  LATENCY_CONCURRENCY_ANALYSIS.md  LATENCY_METRICS.md  PERFORMANCE_SUMMARY.html  PERFORMANCE_SUMMARY.md  README.md  TOPOLOGY.html  TOPOLOGY.md  benchmark_charts.html
scripts/: README.md
scripts/analysis/: benchmark_charts.html  benchmark_results.csv  benchmark_sweep.sh  generate_charts.py  latency_bandwidth_plot.py  server_performance_analysis.py
scripts/dataplane/: AddClientVNetToRegion.ps1  AddCluster.cmd  AddCluster.ps1  DeployApp.cmd  DeployApp.ps1  PeerToPromptService.ps1  README.md  SetupDataPlaneRegion.cmd  SetupDataPlaneRegion.ps1
scripts/deploy/: deploy_client.ps1  deploy_server.ps1
scripts/init/: build_linux.sh  init_repo.sh
scripts/run/: benchmark_run.ps1  deploy-watcher.ps1  get_sfmc_node_ips.ps1  kvtest-watcher.sh  runLocal.ps1  run_azure_linux_both.ps1  run_azure_linux_cluster.ps1  run_azure_linux_node0.ps1  run_azure_linux_node1.ps1  run_local_wsl.sh  start-watcher.ps1
